feat: fix bug input email and components news

--- a/src/components/ui/examples/badge.astro
+++ b/src/components/ui/examples/badge.astro
@@ -1,18 +1,42 @@
-<div class="flex items-center gap-2">
+<div class="flex flex-wrap items-center justify-center gap-2 px-8">
 	<span
-		class="flex items-center justify-center gap-x-1 rounded-md bg-neutral-50 px-2 py-1 text-xs font-medium text-neutral-600 ring-1 ring-neutral-600/10 ring-inset dark:bg-neutral-400/10 dark:text-neutral-400 dark:ring-neutral-400/30">
-		<slot />
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-neutral-50 px-2 py-1 text-xs font-medium text-neutral-600 ring-1 ring-neutral-600/10 ring-inset dark:bg-neutral-400/10 dark:text-neutral-400 dark:ring-neutral-400/30">
+		Neutral
 	</span>
 	<span
-		class="flex items-center justify-center gap-x-1 rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-600 ring-1 ring-green-600/10 ring-inset dark:bg-green-400/10 dark:text-green-400 dark:ring-green-400/30">
-		Success
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-600 ring-1 ring-red-600/10 ring-inset dark:bg-red-400/10 dark:text-red-400 dark:ring-red-400/30">
+		Red
 	</span>
 	<span
-		class="flex items-center justify-center gap-x-1 rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-600 ring-1 ring-yellow-600/10 ring-inset dark:bg-yellow-400/10 dark:text-yellow-400 dark:ring-yellow-400/30">
-		Warning
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-blue-50 px-2 py-1 text-xs font-medium text-blue-600 ring-1 ring-blue-600/10 ring-inset dark:bg-blue-400/10 dark:text-blue-400 dark:ring-blue-400/30">
+		Blue
 	</span>
 	<span
-		class="flex items-center justify-center gap-x-1 rounded-md bg-red-50 px-2 py-1 text-xs font-medium text-red-600 ring-1 ring-red-600/10 ring-inset dark:bg-red-400/10 dark:text-red-400 dark:ring-red-400/30">
-		Danger
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-green-50 px-2 py-1 text-xs font-medium text-green-600 ring-1 ring-green-600/10 ring-inset dark:bg-green-400/10 dark:text-green-400 dark:ring-green-400/30">
+		Green
+	</span>
+	<span
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-yellow-50 px-2 py-1 text-xs font-medium text-yellow-600 ring-1 ring-yellow-600/10 ring-inset dark:bg-yellow-400/10 dark:text-yellow-400 dark:ring-yellow-400/30">
+		Yellow
+	</span>
+	<span
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-pink-50 px-2 py-1 text-xs font-medium text-pink-600 ring-1 ring-pink-600/10 ring-inset dark:bg-pink-400/10 dark:text-pink-400 dark:ring-pink-400/30">
+		Pink
+	</span>
+	<span
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-orange-50 px-2 py-1 text-xs font-medium text-orange-600 ring-1 ring-orange-600/10 ring-inset dark:bg-orange-400/10 dark:text-orange-400 dark:ring-orange-400/30">
+		Orange
+	</span>
+	<span
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-cyan-50 px-2 py-1 text-xs font-medium text-cyan-600 ring-1 ring-cyan-600/10 ring-inset dark:bg-cyan-400/10 dark:text-cyan-400 dark:ring-cyan-400/30">
+		Cyan
+	</span>
+	<span
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-fuchsia-50 px-2 py-1 text-xs font-medium text-fuchsia-600 ring-1 ring-fuchsia-600/10 ring-inset dark:bg-fuchsia-400/10 dark:text-fuchsia-400 dark:ring-fuchsia-400/30">
+		Fuchsia
+	</span>
+	<span
+		class="pointer-events-none flex items-center justify-center gap-x-1 rounded-md bg-purple-50 px-2 py-1 text-xs font-medium text-purple-600 ring-1 ring-purple-600/10 ring-inset dark:bg-purple-400/10 dark:text-purple-400 dark:ring-purple-400/30">
+		Purple
 	</span>
 </div>
