--- a/src/components/ui/examples/button.astro
+++ b/src/components/ui/examples/button.astro
@@ -1,4 +1,4 @@
 <button
 	class="inline-flex cursor-pointer items-center rounded-md border border-neutral-200 px-4 py-2 text-sm text-neutral-900 transition-colors duration-200 ease-in-out hover:border-neutral-300 hover:bg-neutral-200 focus:outline-none dark:border-neutral-800 dark:bg-neutral-900 dark:text-neutral-100 dark:hover:border-neutral-700 dark:hover:bg-neutral-800">
-	<slot />
+	Button
 </button>
