--- a/src/components/ui/examples/card.astro
+++ b/src/components/ui/examples/card.astro
@@ -1,15 +1,19 @@
 <div>
-	<label for="card" class="relative">
-		<article class="relative size-32 perspective-dramatic">
-			<input id="card" class="peer hidden" type="checkbox" />
+	<label class="relative">
+		<article class="relative aspect-video h-32 perspective-dramatic">
+			<input class="peer hidden" type="checkbox" />
 			<div
-				class="transform-style-preserve-3d absolute inset-0 grid cursor-pointer place-content-center border border-neutral-800 bg-neutral-900 p-8 text-center transition-transform duration-500 ease-in-out backface-hidden peer-checked:-rotate-y-180">
+				class="absolute inset-0 grid cursor-pointer place-content-center border border-neutral-800 bg-neutral-900 p-8 text-center transition-transform duration-500 ease-in-out backface-hidden peer-checked:-rotate-y-180">
 				<var class="text-3xl">32k</var>
-				<h3 class="m-0 text-sm text-neutral-400">Correos enviados</h3>
+				<h3 class="text-sm text-neutral-300 dark:text-neutral-400">
+					Correos enviados
+				</h3>
 			</div>
 			<div
-				class="transform-style-preserve-3d absolute inset-0 grid rotate-y-180 cursor-pointer place-content-center border border-neutral-800 bg-neutral-900 p-8 text-center transition-transform duration-500 ease-in-out backface-hidden peer-checked:rotate-y-0">
-				<p class="text-sm text-neutral-500">Más información</p>
+				class="absolute inset-0 grid rotate-y-180 cursor-pointer place-content-center border border-neutral-800 bg-neutral-900 p-8 text-center transition-transform duration-500 ease-in-out backface-hidden peer-checked:rotate-y-0">
+				<p class="text-sm text-neutral-300 dark:text-neutral-400">
+					Más información
+				</p>
 			</div>
 		</article>
 	</label>
