--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -8,7 +8,7 @@
 		<a
 			class="underline"
 			target="_blank"
-			href="https://github.com/Alexisxde/wertyui">
+			href="https://github.com/Alexisxde/astro-ui-kit">
 			GitHub</a
 		>.
 	</p>
