--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,6 +1,6 @@
 ---
+import GithubIcon from "@/components/icons/github.astro"
 import { cn } from "@/lib/utils"
-import GithubIcon from "./icons/github.astro"
 
 interface Props {
 	class?: string
