--- a/src/components/ui/examples/disclosure.astro
+++ b/src/components/ui/examples/disclosure.astro
@@ -1,24 +1,5 @@
-<details
-	class="group mx-4 w-full rounded-md border border-neutral-800 px-6 py-4 text-sm open:transition-all open:duration-200 open:ease-in-out focus:outline-none">
-	<summary class="list-none select-none">
-		<div class="flex items-center justify-between">
-			<p class="text-neutral-900 dark:text-neutral-100">Detalles</p>
-			<div
-				class="px-2 py-1 transition-transform duration-200 ease-in-out group-open:rotate-180">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					fill="none"
-					viewBox="0 0 24 24"
-					stroke-width="1.5"
-					stroke="currentColor"
-					class="size-5">
-					<path
-						stroke-linecap="round"
-						stroke-linejoin="round"
-						d="m19.5 8.25-7.5 7.5-7.5-7.5"></path>
-				</svg>
-			</div>
-		</div>
-	</summary>
-	<p class="text-neutral-400">Más informacion de los detalles...</p>
-</details>
+---
+import Disclosure from "@/components/ui/disclosure.astro"
+---
+
+<Disclosure title="Detalles"> Más informacion de los detalles.. </Disclosure>
