--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -39,8 +39,8 @@ const { title, description } = Astro.props
 			<div class="flex">
 				<Sidebar />
 				<div class="flex w-full flex-col">
-					<main class="max-w-8xl mx-auto w-full flex-1 px-12 py-8">
-						<article class="prose-neutral prose-pre:p-5 max-w-xl">
+					<main class="max-w-8xl mx-auto w-full flex-1 px-4 md:px-12 py-8">
+						<article class="prose prose-invert max-w-3xl">
 							<slot />
 						</article>
 					</main>
