--- a/src/components/code-block.astro
+++ b/src/components/code-block.astro
@@ -20,6 +20,6 @@ const fileContent = filePath ? extractCodeFromFilePath(filePath) : code
 <Code
 	code={fileContent}
 	{lang}
-	class="h-auto max-h-[400px] overflow-y-auto rounded-lg border-1 border-neutral-200 dark:border-neutral-800"
+	class="h-auto max-h-[400px] w-full overflow-y-auto rounded-lg border-1 border-neutral-200 focus:outline-none dark:border-neutral-800"
 	wrap={true}
 />
