--- a/src/components/component-preview.astro
+++ b/src/components/component-preview.astro
@@ -10,7 +10,7 @@ const { class: className } = Astro.props
 
 <div
 	class={cn(
-		"group flex min-h-[250px] w-full items-center justify-center rounded-md",
+		"flex min-h-[250px] w-full items-center justify-center flex-wrap rounded-md gap-4",
 		className
 	)}>
 	<slot />
