--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -22,14 +22,17 @@ const NAVIGATION: NavigationGroup[] = [
 	{
 		name: "Components",
 		children: [
-      { name: "Button", href: "/docs/button" }
+      { name: "Button", href: "/docs/button" },
+      { name: "Input", href: "/docs/input" },
+      { name: "Badge", href: "/docs/badge" },
+      { name: "Sheet", href: "/docs/sheet" }
     ]
 	}
 ]
 ---
 
 <aside
-	class="sticky h-svh top-12 z-20 flex w-[200px] shrink-0 flex-col border-b-1 border-r-1 border-neutral-800 bg-neutral-900 p-6 overflow-y-auto">
+	class="sticky h-svh top-12 z-20 w-[200px] shrink-0 flex-col border-b-1 border-r-1 border-neutral-800 bg-neutral-900 p-6 overflow-y-auto hidden md:flex">
 	<nav class="flex flex-col gap-2">
 		{
 			NAVIGATION.map(({ name, children }) => (
