--- a/src/components/ui/examples/card.astro
+++ b/src/components/ui/examples/card.astro
@@ -1,6 +1,6 @@
 <div>
 	<label class="relative">
-		<article class="relative aspect-video h-32 perspective-dramatic">
+		<article class="relative aspect-video h-32 perspective-distant">
 			<input class="peer hidden" type="checkbox" />
 			<div
 				class="absolute inset-0 grid cursor-pointer place-content-center border border-neutral-800 bg-neutral-900 p-8 text-center transition-transform duration-500 ease-in-out backface-hidden peer-checked:-rotate-y-180">
