chore: Update page titles and descriptions for consistency

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -2,7 +2,7 @@
 		<div class="mx-auto max-w-7xl px-2 py-16 lg:py-24">
 			<h1
 				class="text-2xl font-semibold tracking-tight text-pretty text-neutral-100 sm:text-[length:clamp(2rem,3.75vw,3rem)]/tight">
-				Componentes estilizados, con 0 JavaScript <span class="text-2xl font-semibold">(o muy poco 🤫)</span> diseñados para integrarse con
+				Componentes estilizados, con 0 JavaScript <span class="text-2xl font-semibold">(o muy poco 🤫)</span> diseñados para integrarse en Astro con
 				Tailwind CSS.
 			</h1>
 		</div>
