--- a/src/components/ui/disclosure.astro
+++ b/src/components/ui/disclosure.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props
 	class="group mx-4 w-full rounded-md border border-neutral-800 px-6 py-4 text-sm open:transition-all open:duration-200 open:ease-in-out focus:outline-none">
 	<summary class="cursor-pointer list-none select-none">
 		<div class="flex items-center justify-between">
-			<p class="text-neutral-900 dark:text-neutral-100">{title}</p>
+			<span class="text-neutral-900 dark:text-neutral-100">{title}</span>
 			<div
 				class="px-2 py-1 transition-transform duration-200 ease-in-out group-open:rotate-180">
 				<svg
