--- a/src/components/examples/badges.astro
+++ b/src/components/examples/badges.astro
@@ -3,15 +3,26 @@ import Badge from "@/components/ui/badge.astro"
 ---
 
 <div class="flex flex-wrap items-center justify-center gap-2 px-8">
-	<Badge variant="neutral">Neutral</Badge>
 	<Badge variant="red">Red</Badge>
-	<Badge variant="blue">Blue</Badge>
-	<Badge variant="green">Green</Badge>
-	<Badge variant="yellow">Yellow</Badge>
-	<Badge variant="pink">Pink</Badge>
 	<Badge variant="orange">Orange</Badge>
+	<Badge variant="amber">Amber</Badge>
+	<Badge variant="yellow">Yellow</Badge>
+	<Badge variant="lime">Lime</Badge>
+	<Badge variant="green">Green</Badge>
+	<Badge variant="emerald">Emerald</Badge>
+	<Badge variant="teal">Teal</Badge>
 	<Badge variant="cyan">Cyan</Badge>
-	<Badge variant="fuchsia">Fuchsia</Badge>
-	<Badge variant="purple">Purple</Badge>
 	<Badge variant="sky">Sky</Badge>
+	<Badge variant="blue">Blue</Badge>
+	<Badge variant="indigo">Indigo</Badge>
+	<Badge variant="violet">Violet</Badge>
+	<Badge variant="purple">Purple</Badge>
+	<Badge variant="fuchsia">Fuchsia</Badge>
+	<Badge variant="pink">Pink</Badge>
+	<Badge variant="rose">Rose</Badge>
+	<Badge variant="slate">Slate</Badge>
+	<Badge variant="gray">Gray</Badge>
+	<Badge variant="zinc">Zinc</Badge>
+	<Badge variant="neutral">Neutral</Badge>
+	<Badge variant="stone">Stone</Badge>
 </div>
