--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -14,7 +14,9 @@ const { class: className } = Astro.props
 		"sticky top-0 z-30 flex h-12 max-h-12 min-h-12 items-center justify-between border-b-1 border-neutral-200 bg-neutral-100 px-6 dark:border-neutral-800 dark:bg-neutral-900",
 		className
 	)}>
-	<div></div>
+	<a href="/" class="size-7">
+    <img class="size-full" src="/favicon.svg" alt="Logo Astro UI Kit">
+  </a>
 	<div class="flex items-center gap-4">
 		<nav
 			class="flex items-center gap-4 border-r-1 border-neutral-200 pr-4 text-sm font-medium dark:border-neutral-800">
