--- a/src/components/sidebar.astro
+++ b/src/components/sidebar.astro
@@ -1,4 +1,6 @@
 ---
+import { cn } from "@/lib/utils"
+
 interface NavigationItem {
 	name: string
 	href: string
@@ -25,14 +27,17 @@ const NAVIGATION: NavigationGroup[] = [
       { name: "Button", href: "/docs/button" },
       { name: "Input", href: "/docs/input" },
       { name: "Badge", href: "/docs/badge" },
-      { name: "Sheet", href: "/docs/sheet" }
+      { name: "Sheet", href: "/docs/sheet" },
+      { name: "Disclosure", href: "/docs/disclosure" }
     ]
 	}
 ]
+
+const { slug } = Astro.params
 ---
 
 <aside
-	class="sticky h-svh top-12 z-20 w-[200px] shrink-0 flex-col border-b-1 border-r-1 border-neutral-800 bg-neutral-900 p-6 overflow-y-auto hidden md:flex">
+	class="sticky h-svh top-12 z-20 w-[225px] shrink-0 flex-col border-b-1 border-r-1 border-neutral-800 bg-neutral-900 p-6 overflow-y-auto hidden md:flex">
 	<nav class="flex flex-col gap-2">
 		{
 			NAVIGATION.map(({ name, children }) => (
@@ -41,15 +46,15 @@ const NAVIGATION: NavigationGroup[] = [
 				</div>
         <div class="space-y-1 border-l-1 border-neutral-800">
           {children.map(({ name, href, isNew, isUpdated }) => (
-            <a class="transition-colors duration-100 ease-in-out flex items-center pl-4 text-xs font-normal text-neutral-400 hover:text-neutral-100" href={href}>
+            <a class={cn("transition-colors duration-100 ease-in-out flex items-center pl-4 text-xs font-normal", href === `/docs/${slug}` ? "text-neutral-500 underline" : "text-neutral-400 hover:text-neutral-100")} {href}>
               <span>{name}</span>
               {isNew && (
-                <span class="ml-2 rounded-lg px-2 text-[10px] font-semibold whitespace-nowrap bg-neutral-700 text-emerald-50">
+                <span class="ml-2 rounded-lg px-2 text-[9px] whitespace-nowrap bg-emerald-700 text-emerald-50">
                   New
                 </span>
               )}
               {isUpdated && (
-                <span class="ml-2 rounded-lg bg-amber-100 px-2 text-[10px] font-semibold whitespace-nowrap text-amber-800 dark:bg-amber-950 dark:text-amber-50">
+                <span class="ml-2 rounded-lg bg-amber-100 px-2 text-[9px] whitespace-nowrap text-amber-800 dark:bg-amber-950 dark:text-amber-50">
                   Updated
                 </span>
               )}
