--- a/src/components/ui/badge.astro
+++ b/src/components/ui/badge.astro
@@ -23,7 +23,24 @@ const badge = cva(
 					"bg-fuchsia-50 text-fuchsia-600 ring-1 ring-fuchsia-600/10 ring-inset dark:bg-fuchsia-400/10 dark:text-fuchsia-400 dark:ring-fuchsia-400/30",
 				purple:
 					"bg-purple-50 text-purple-600 ring-1 ring-purple-600/10 ring-inset dark:bg-purple-400/10 dark:text-purple-400 dark:ring-purple-400/30",
-				sky: "bg-sky-50 text-sky-600 ring-1 ring-sky-600/10 ring-inset dark:bg-sky-400/10 dark:text-sky-400 dark:ring-sky-400/30"
+				sky: "bg-sky-50 text-sky-600 ring-1 ring-sky-600/10 ring-inset dark:bg-sky-400/10 dark:text-sky-400 dark:ring-sky-400/30",
+				amber:
+					"bg-amber-50 text-amber-600 ring-1 ring-amber-600/10 ring-inset dark:bg-amber-400/10 dark:text-amber-400 dark:ring-amber-400/30",
+				lime: "bg-lime-50 text-lime-600 ring-1 ring-lime-600/10 ring-inset dark:bg-lime-400/10 dark:text-lime-400 dark:ring-lime-400/30",
+				emerald:
+					"bg-emerald-50 text-emerald-600 ring-1 ring-emerald-600/10 ring-inset dark:bg-emerald-400/10 dark:text-emerald-400 dark:ring-emerald-400/30",
+				teal: "bg-teal-50 text-teal-600 ring-1 ring-teal-600/10 ring-inset dark:bg-teal-400/10 dark:text-teal-400 dark:ring-teal-400/30",
+				violet:
+					"bg-violet-50 text-violet-600 ring-1 ring-violet-600/10 ring-inset dark:bg-violet-400/10 dark:text-violet-400 dark:ring-violet-400/30",
+				rose: "bg-rose-50 text-rose-600 ring-1 ring-rose-600/10 ring-inset dark:bg-rose-400/10 dark:text-rose-400 dark:ring-rose-400/30",
+				zinc: "bg-zinc-50 text-zinc-600 ring-1 ring-zinc-600/10 ring-inset dark:bg-zinc-400/10 dark:text-zinc-400 dark:ring-zinc-400/30",
+				stone:
+					"bg-stone-50 text-stone-600 ring-1 ring-stone-600/10 ring-inset dark:bg-stone-400/10 dark:text-stone-400 dark:ring-stone-400/30",
+				gray: "bg-gray-50 text-gray-600 ring-1 ring-gray-600/10 ring-inset dark:bg-gray-400/10 dark:text-gray-400 dark:ring-gray-400/30",
+				indigo:
+					"bg-indigo-50 text-indigo-600 ring-1 ring-indigo-600/10 ring-inset dark:bg-indigo-400/10 dark:text-indigo-400 dark:ring-indigo-400/30",
+				slate:
+					"bg-slate-50 text-slate-600 ring-1 ring-slate-600/10 ring-inset dark:bg-slate-400/10 dark:text-slate-400 dark:ring-slate-400/30"
 			},
 			size: {
 				xs: "px-2 py-1 text-xs rounded-md",
