--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,15 +6,15 @@ import Badge from "@/components/ui/examples/badge.astro"
 import Button from "@/components/ui/examples/button.astro"
 import Disclosure from "@/components/ui/examples/disclosure.astro"
 import Inputs from "@/components/ui/examples/input.astro"
-import Menu from "@/components/ui/examples/sheet.astro"
+import Sheet from "@/components/ui/examples/sheet.astro"
 // import CardFlip from "@/components/ui/examples/card.astro"
 // import Tabs from "@/components/ui/examples/tabs.astro"
 
 const COMPONENTS = [
 	{ name: "Buttons", component: Button, href: "/docs/button" },
 	{ name: "Inputs", component: Inputs, href: "/docs/input" },
-	{ name: "Sheet", component: Menu, href: "/docs/sheet" },
 	{ name: "Badges", component: Badge, href: "/docs/badge" },
+	{ name: "Sheet", component: Sheet, href: "/docs/sheet" },
 	{ name: "Disclosure", component: Disclosure, href: "/docs/disclosure" }
 	// { name: "Cards", component: CardFlip, href: "/docs/card" },
 	// { name: "Tabs", component: Tabs, href: "/docs/tabs" }
