--- a/src/components/ui/badge.astro
+++ b/src/components/ui/badge.astro
@@ -1,5 +1,6 @@
 ---
 import { cn } from "@/lib/utils"
+import type { HTMLAttributes } from "astro/types"
 import { cva, type VariantProps } from "class-variance-authority"
 
 const badge = cva(
@@ -53,12 +54,14 @@ const badge = cva(
 )
 
 interface Props
-	extends astroHTML.JSX.HTMLAttributes,
+	extends HTMLAttributes<"span">,
+		Omit<HTMLAttributes<"a">, "type">,
 		VariantProps<typeof badge> {}
 
-const { variant, size, class: className } = Astro.props
+const { variant, size, class: className, ...rest } = Astro.props
+const Tag = rest.href ? "a" : "span"
 ---
 
-<span class={cn(badge({ variant, size }), className)}>
+<Tag class={cn(badge({ variant, size }), className)} {...rest}>
 	<slot />
-</span>
+</Tag>
