--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -1,5 +1,6 @@
 ---
 import { cn } from "@/lib/utils"
+import type { HTMLAttributes } from "astro/types"
 import { cva, type VariantProps } from "class-variance-authority"
 
 const button = cva(
@@ -32,7 +33,8 @@ const button = cva(
 )
 
 interface Props
-	extends Omit<astroHTML.JSX.ButtonHTMLAttributes, "disabled">,
+	extends Omit<HTMLAttributes<"button">, "disabled">,
+		Omit<HTMLAttributes<"a">, "type">,
 		VariantProps<typeof button> {}
 
 const {
@@ -42,8 +44,9 @@ const {
 	disabled = false,
 	...rest
 } = Astro.props
+const Tag = rest.href ? "a" : "button"
 ---
 
-<button class={cn(button({ variant, size, disabled }), className)} {...rest}>
+<Tag class={cn(button({ variant, size, disabled }), className)} {...rest}>
 	<slot />
-</button>
+</Tag>
