--- a/src/components/ui/disclosure.astro
+++ b/src/components/ui/disclosure.astro
@@ -1,13 +1,15 @@
 ---
-interface Props extends astroHTML.JSX.HTMLAttributes {
+import type { HTMLAttributes } from "astro/types"
+interface Props extends HTMLAttributes<"details"> {
 	title: string
 }
 
-const { title } = Astro.props
+const { title, ...rest } = Astro.props
 ---
 
 <details
-	class="group mx-4 w-full rounded-md border border-neutral-800 px-6 py-4 text-sm open:transition-all open:duration-200 open:ease-in-out focus:outline-none">
+	class="group mx-4 w-full rounded-md border border-neutral-800 px-6 py-4 text-sm open:transition-all open:duration-200 open:ease-in-out focus:outline-none"
+	{...rest}>
 	<summary class="cursor-pointer list-none select-none">
 		<div class="flex items-center justify-between">
 			<span class="text-neutral-900 dark:text-neutral-100">{title}</span>
@@ -28,7 +30,7 @@ const { title } = Astro.props
 			</div>
 		</div>
 	</summary>
-	<p class="text-neutral-400 text-pretty">
+	<p class="text-pretty text-neutral-400">
 		<slot />
 	</p>
 </details>
