--- a/src/components/ui/input.astro
+++ b/src/components/ui/input.astro
@@ -1,9 +1,12 @@
 ---
 import { cn } from "@/lib/utils"
+import type { HTMLAttributes } from "astro/types"
 
-interface Props extends astroHTML.JSX.InputHTMLAttributes {}
+interface Props extends HTMLAttributes<"input"> {
+	id: string
+}
 
-const { type, id, class: className, ...rest } = Astro.props
+const { type = "text", id, class: className, ...rest } = Astro.props
 ---
 
 <div class="relative">
