--- a/src/components/ui/sheet.astro
+++ b/src/components/ui/sheet.astro
@@ -1,16 +1,19 @@
 ---
 import { cn } from "@/lib/utils"
+import type { HTMLAttributes } from "astro/types"
 
-interface Props extends astroHTML.JSX.HTMLAttributes {}
+interface Props extends HTMLAttributes<"aside"> {
+	title: string
+}
 
-const { class: className, ...rest } = Astro.props
+const { title = "Example", class: className, ...rest } = Astro.props
 ---
 
 <div
 	id="background-menu"
 	class="inset-0 z-50 hidden bg-[rgba(0,0,0,0.1)] backdrop-blur-sm transition duration-200 ease-in-out">
 </div>
-<div
+<aside
 	id="menu"
 	class={cn(
 		"fixed top-0 right-0 bottom-0 z-50 h-dvh w-full max-w-sm border-r-1 translate-x-[200%] border-neutral-200 bg-neutral-100 transition-transform duration-150 ease-in-out dark:border-neutral-800 dark:bg-neutral-900",
@@ -19,7 +22,7 @@ const { class: className, ...rest } = Astro.props
 	{...rest}>
 	<div
 		class="relative flex items-center justify-between border-b-1 border-neutral-800 p-4">
-		<h3 class="m-1! text-lg font-medium">Example</h3>
+		<h3 class="m-1! text-lg font-medium">{title}</h3>
 		<button
 			id="btn-close"
 			class="inline-flex cursor-pointer items-center rounded-md p-1 text-sm text-neutral-900 transition-colors duration-200 ease-in-out hover:bg-neutral-200 focus:outline-none dark:bg-neutral-900 dark:text-neutral-100 dark:hover:bg-neutral-800">
@@ -40,7 +43,7 @@ const { class: className, ...rest } = Astro.props
 	<div class="p-4">
 		<slot />
 	</div>
-</div>
+</aside>
 
 <button
 	id="btn-open"
