--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,9 @@ import Sheet from "@/components/ui/examples/sheet.astro"
 // import Tabs from "@/components/ui/examples/tabs.astro"
 
 const COMPONENTS = [
-	{ name: "Buttons", component: Button, href: "/docs/button" },
-	{ name: "Inputs", component: Inputs, href: "/docs/input" },
-	{ name: "Badges", component: Badge, href: "/docs/badge" },
+	{ name: "Button", component: Button, href: "/docs/button" },
+	{ name: "Input", component: Inputs, href: "/docs/input" },
+	{ name: "Badge", component: Badge, href: "/docs/badge" },
 	{ name: "Sheet", component: Sheet, href: "/docs/sheet" },
 	{ name: "Disclosure", component: Disclosure, href: "/docs/disclosure" }
 	// { name: "Cards", component: CardFlip, href: "/docs/card" },
