--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,13 +11,13 @@ import Sheet from "@/components/ui/examples/sheet.astro"
 // import Tabs from "@/components/ui/examples/tabs.astro"
 
 const COMPONENTS = [
-	{ name: "Button", component: Button, href: "/docs/button" },
-	{ name: "Input", component: Inputs, href: "/docs/input" },
-	{ name: "Badge", component: Badge, href: "/docs/badge" },
-	{ name: "Sheet", component: Sheet, href: "/docs/sheet" },
-	{ name: "Disclosure", component: Disclosure, href: "/docs/disclosure" }
-	// { name: "Cards", component: CardFlip, href: "/docs/card" },
-	// { name: "Tabs", component: Tabs, href: "/docs/tabs" }
+	{ name: "Button", component: Button, href: "/components/button" },
+	{ name: "Input", component: Inputs, href: "/components/input" },
+	{ name: "Badge", component: Badge, href: "/components/badge" },
+	{ name: "Sheet", component: Sheet, href: "/components/sheet" },
+	{ name: "Disclosure", component: Disclosure, href: "/components/disclosure" }
+	// { name: "Cards", component: CardFlip, href: "/components/card" },
+	// { name: "Tabs", component: Tabs, href: "/components/tabs" }
 ] as const
 ---
 
