--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -22,11 +22,7 @@ const { class: className } = Astro.props
 			class="flex items-center gap-4 border-r-1 border-neutral-200 pr-4 text-sm font-medium dark:border-neutral-800">
 			<a
 				class="text-neutral-400 transition-colors duration-300 ease-in-out hover:text-neutral-100"
-				href="/docs">Docs</a
-			>
-			<a
-				class="text-neutral-400 transition-colors duration-300 ease-in-out hover:text-neutral-100"
-				href="/docs/button">Components</a
+				href="/components/button">Components</a
 			>
 		</nav>
 		<a
