feat: Cambiar la carga de componentes a 'client:load' para mejorar el rendimiento

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -48,7 +48,7 @@ const COMPONENTS = [
 							</svg>
 						</a>
 						<div class="flex size-full items-center justify-center border-1 border-neutral-800">
-							<component.component client:visible />
+							<component.component client:load />
 						</div>
 						<p class="border-x-1 border-b-1 border-neutral-800 p-2 text-sm">
 							{component.name}
